--- a/allocation-confirmation.html
+++ b/allocation-confirmation.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div id="dark-overlay"></div>
+    <div id="dark-overlay-dropdown"></div>
 
     <section id="allocation-confirm">
       <div class="custom-modal small-width">
