--- a/financial-planning.html
+++ b/financial-planning.html
@@ -18,6 +18,7 @@
     <title>What is Financial Planning?</title>
   </head>
   <body>
+    <div id="dark-overlay-dropdown"></div>
     <!-- SCROLL PROGRESS BAR START -->
 
     <div class="progress-header">
