--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
   </head>
 
   <body class="planyybody">
-    <div id="dark-overlay-beneath" class=""></div>
+    <div id="dark-overlay-dropdown"></div>
+    <div id="dark-overlay-beneath" class="d-none"></div>
     <div id="dark-overlay" class="d-none"></div>
     <div id="right-menu-login" class="d-none">
       <div class="close">
@@ -1674,7 +1675,7 @@
         </div>
       </div>
     </div>
-    <div id="right-menu" class="">
+    <div id="right-menu" class="d-none">
       <div class="close">
         <img src="./assets/images/close.svg" alt="close" />
       </div>
