--- a/service.html
+++ b/service.html
@@ -55,6 +55,7 @@
   </head>
 
   <body class="planyybody service">
+    <div id="dark-overlay-dropdown"></div>
     <div class="checking"><img src="./assets/images/check1.png" /></div>
     <div class="planyy_contain">
       <div class="col-12 p-0 mt-0">
@@ -1183,9 +1184,9 @@
                                         <div
                                           class="
                                             fw-600
-                                            fs-18 fs-1366-14 fs-575-12
+                                            fs-18 fs-1919-14 fs-575-12
                                             title
-                                            lh-24 lh-1366-18
+                                            lh-24 lh-1919-18
                                           "
                                         >
                                           Axis Banking And Financial Services
@@ -1201,7 +1202,7 @@
                                             <div
                                               class="
                                                 fw-600
-                                                fs-18 fs-1366-14 fs-575-12
+                                                fs-18 fs-1919-14 fs-575-12
                                               "
                                             >
                                               5
@@ -1224,7 +1225,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fs-18 fs-1366-14 fs-575-12
+                                              fs-18 fs-1919-14 fs-575-12
                                             "
                                           >
                                             Allocation
@@ -1232,7 +1233,7 @@
                                           <div
                                             class="
                                               big-text
-                                              fs-32 fs-1366-24 fs-575-20
+                                              fs-32 fs-1919-24 fs-575-20
                                               fw-600
                                             "
                                           >
@@ -1244,7 +1245,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fs-18 fs-1366-14 fs-575-12
+                                              fs-18 fs-1919-14 fs-575-12
                                             "
                                           >
                                             Amount
@@ -1252,7 +1253,7 @@
                                           <div
                                             class="
                                               big-text
-                                              fs-32 fs-1366-24 fs-575-20
+                                              fs-32 fs-1919-24 fs-575-20
                                               fw-600
                                             "
                                           >
@@ -1264,7 +1265,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fs-18 fs-1366-14 fs-575-12
+                                              fs-18 fs-1919-14 fs-575-12
                                               frequency
                                             "
                                           >
@@ -1274,7 +1275,7 @@
                                             <div
                                               class="
                                                 tag
-                                                fs-14 fs-1366-12 fs-575-10
+                                                fs-14 fs-1919-12 fs-575-10
                                                 text-light-2
                                               "
                                             >
@@ -1287,7 +1288,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fs-18 fs-1366-14 fs-575-12
+                                              fs-18 fs-1919-14 fs-575-12
                                             "
                                           >
                                             RETURNS(1Y)
@@ -1295,7 +1296,7 @@
                                           <div
                                             class="
                                               big-text
-                                              fs-24 fs-1366-18 fs-575-14
+                                              fs-24 fs-1919-18 fs-575-14
                                               fw-600
                                             "
                                           >
@@ -1773,9 +1774,9 @@
                                         <div
                                           class="
                                             fw-600
-                                            fs-18 fs-1366-14 fs-575-12
+                                            fs-18 fs-1919-14 fs-575-12
                                             title
-                                            lh-24 lh-1366-18
+                                            lh-24 lh-1919-18
                                           "
                                         >
                                           Axis Banking And Financial Services
@@ -1791,7 +1792,7 @@
                                             <div
                                               class="
                                                 fw-600
-                                                fs-18 fs-1366-14 fs-575-12
+                                                fs-18 fs-1919-14 fs-575-12
                                               "
                                             >
                                               5
@@ -1801,7 +1802,7 @@
                                             <div
                                               class="
                                                 fw-600
-                                                fs-24 fs-1366-18 fs-575-14
+                                                fs-24 fs-1919-18 fs-575-14
                                               "
                                             >
                                               8.3%
@@ -1831,7 +1832,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fs-18 fs-1366-14 fs-575-12
+                                              fs-18 fs-1919-14 fs-575-12
                                             "
                                           >
                                             Allocation
@@ -1839,7 +1840,7 @@
                                           <div
                                             class="
                                               big-text
-                                              fs-32 fs-1366-24 fs-575-20
+                                              fs-32 fs-1919-24 fs-575-20
                                               fw-600
                                             "
                                           >
@@ -1851,7 +1852,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fs-18 fs-1366-14 fs-575-12
+                                              fs-18 fs-1919-14 fs-575-12
                                             "
                                           >
                                             Amount
@@ -1859,7 +1860,7 @@
                                           <div
                                             class="
                                               big-text
-                                              fs-32 fs-1366-24 fs-575-20
+                                              fs-32 fs-1919-24 fs-575-20
                                               fw-600
                                             "
                                           >
@@ -1871,7 +1872,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fs-18 fs-1366-14 fs-575-12
+                                              fs-18 fs-1919-14 fs-575-12
                                             "
                                           >
                                             Gain
@@ -1879,7 +1880,7 @@
                                           <div
                                             class="
                                               big-text
-                                              fs-32 fs-1366-24 fs-575-20
+                                              fs-32 fs-1919-24 fs-575-20
                                               fw-600
                                             "
                                           >
@@ -1892,7 +1893,7 @@
                                             class="
                                               small-text
                                               text-light-2
-                                              fs-18 fs-1366-14
+                                              fs-18 fs-1919-14
                                               frequency
                                             "
                                           >
