--- a/uploader.html
+++ b/uploader.html
@@ -22,6 +22,7 @@
     <title>Uploader</title>
   </head>
   <body>
+    <div id="dark-overlay-dropdown"></div>
     <div id="dark-overlay"></div>
 
     <section id="uploader">
