--- a/blogs.html
+++ b/blogs.html
@@ -18,6 +18,7 @@
     <title>Blogs</title>
   </head>
   <body>
+    <div id="dark-overlay-dropdown"></div>
     <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
 
     <!-- <nav id="navbar" class="blogs-navbar">
