--- a/details.html
+++ b/details.html
@@ -22,6 +22,7 @@
     <title>Details</title>
   </head>
   <body>
+    <div id="dark-overlay-dropdown"></div>
     <div id="dark-overlay"></div>
 
     <section id="details">
