--- a/investment-ready.html
+++ b/investment-ready.html
@@ -22,6 +22,7 @@
     <title>Confirm</title>
   </head>
   <body>
+    <div id="dark-overlay-dropdown"></div>
     <div id="dark-overlay"></div>
 
     <section id="investment-ready">
