--- a/profile.html
+++ b/profile.html
@@ -22,6 +22,7 @@
     <title>Profile</title>
   </head>
   <body>
+    <div id="dark-overlay-dropdown"></div>
     <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
 
     <nav id="navbar-sm" class="notification-navbar sm d-768-none">
