--- a/refer-and-invest.html
+++ b/refer-and-invest.html
@@ -18,6 +18,7 @@
     <title>Blogs</title>
   </head>
   <body>
+    <div id="dark-overlay-dropdown"></div>
     <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
 
     <nav id="navbar-sm" class="notification-navbar sm d-768-none">
