--- a/transactions.html
+++ b/transactions.html
@@ -18,6 +18,7 @@
     <title>Transactions</title>
   </head>
   <body>
+    <div id="dark-overlay-dropdown"></div>
     <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
 
     <nav id="navbar-sm" class="notification-navbar sm d-768-none">
