--- a/uploading.html
+++ b/uploading.html
@@ -22,6 +22,7 @@
     <title>Uploading</title>
   </head>
   <body>
+    <div id="dark-overlay-dropdown"></div>
     <div id="dark-overlay"></div>
 
     <section id="uploading">
