--- a/service.html
+++ b/service.html
@@ -103,6 +103,20 @@
                   <h3>Moderate</h3>
                 </div>
               </div>
+              <div class="planyy_hed_p4">
+                <div class="item">
+                  <img
+                    src="./assets/images/Notification.svg"
+                    alt="notification"
+                  />
+                </div>
+                <div class="item">
+                  <img src="./assets/images/car.svg" alt="car" />
+                </div>
+                <div class="item">
+                  <img src="./assets/images/profile.svg" alt="profile" />
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -214,13 +228,20 @@
                   </div>
                 </div>
               </div>
-              <span class="btnspnmakpay1"
+              <!-- <span class="btnspnmakpay1"
                 ><input
                   type="button"
                   name="next"
                   class="next action-button btns1 demo-label ac2 xop"
                   value="Generate My Financial Plan"
-              /></span>
+              /></span> -->
+              <div class="bottom-btn-sm all btnspnmakpay1">
+                <button
+                  class="btn btn-bg-primary mt-4 btns1 demo-label ac2 active"
+                >
+                  Generate My Financial Plan
+                </button>
+              </div>
             </fieldset>
             <fieldset
               class="animate__animated animate__fadeInRight animate__faster"
@@ -286,13 +307,18 @@
                   </div>
                 </div>
               </div>
-              <span class="btnspnmakpay1"
+              <!-- <span class="btnspnmakpay1"
                 ><input
                   type="button"
                   name="next"
                   class="next action-button btns1 active ac3"
                   value="Show My Financial Plan"
-              /></span>
+              /></span> -->
+              <div class="bottom-btn-sm all btnspnmakpay1">
+                <button class="btn btn-bg-primary mt-4 btns1 demo-label ac3">
+                  Show My Financial Plan
+                </button>
+              </div>
               <!-- <input type="button" name="previous" class="previous action-button-previous backarr ac1" value="❮" />   -->
             </fieldset>
             <fieldset
@@ -714,13 +740,18 @@
                   </div>
                 </div>
               </div>
-              <span class="btnspnmakpay1"
+              <!-- <span class="btnspnmakpay1"
                 ><input
                   type="button"
                   name="next"
                   class="next action-button btns1 active st1 ac4"
                   value="Help Me Achieve My Financial Plan"
-              /></span>
+              /></span> -->
+              <div class="bottom-btn-sm all btnspnmakpay1">
+                <button class="btn btn-bg-primary mt-4 btns1 demo-label ac4">
+                  Help Me Acheive My Financial Plan
+                </button>
+              </div>
               <!-- <input type="button" name="previous" class="previous action-button-previous backarr ac2" value="❮" />   -->
             </fieldset>
             <fieldset
@@ -1354,7 +1385,7 @@
                   </div>
                 </div>
               </div>
-              <span class="btnspnmakpay"
+              <!-- <span class="btnspnmakpay"
                 ><input
                   type="button"
                   name="next"
@@ -1362,7 +1393,18 @@
                   data-toggle="modal"
                   data-target="#exampleModal3"
                   value="Ready To Invest"
-              /></span>
+              /></span> -->
+              <div class="bottom-btn-sm all btnspnmakpay1">
+                <button
+                  name="next"
+                  type="button"
+                  data-toggle="modal"
+                  data-target="#exampleModal3"
+                  class="btn btn-bg-primary mt-4 active"
+                >
+                  Ready To Invest
+                </button>
+              </div>
               <!-- <input type="button" name="previous" class="previous action-button-previous backarr" value="❮" /> -->
             </fieldset>
 
