right-menu fixed

--- a/index.html
+++ b/index.html
@@ -1681,14 +1681,14 @@
       </div>
 
       <div class="nav">
-        <a href="#" class="active fs-1919-24 fs-768-32 fw-600">Home</a>
+        <a href="#" class="active fs-1919-24 fs-768-32 fs-575-24 fw-600">Home</a>
         <a href="#" class="fs-1919-24 fs-768-32 fs-575-24 fw-600">Reads</a>
         <a href="#" class="fs-1919-24 fs-768-32 fs-575-24 fw-600">About Us</a>
         <a href="#" class="fs-1919-24 fs-768-32 fs-575-24 fw-600">T&C</a>
       </div>
 
       <div>
-        <button class="btn btn-bg-primary signup fs-24 fs-1366-14">
+        <button class="btn btn-bg-primary signup fs-24 fs-1919-16">
           Sign Up
         </button>
       </div>
