font-size fixed in index.html

--- a/index.html
+++ b/index.html
@@ -1681,7 +1681,9 @@
       </div>
 
       <div class="nav">
-        <a href="#" class="active fs-1919-24 fs-768-32 fs-575-24 fw-600">Home</a>
+        <a href="#" class="active fs-1919-24 fs-768-32 fs-575-24 fw-600"
+          >Home</a
+        >
         <a href="#" class="fs-1919-24 fs-768-32 fs-575-24 fw-600">Reads</a>
         <a href="#" class="fs-1919-24 fs-768-32 fs-575-24 fw-600">About Us</a>
         <a href="#" class="fs-1919-24 fs-768-32 fs-575-24 fw-600">T&C</a>
@@ -2254,8 +2256,12 @@
 
     <div class="slider_text">
       <div class="slider_text_p1">
-        <h2 class="resist-size">Respectful And</h2>
-        <h3>Confident Retirement</h3>
+        <h2 class="resist-size fs-56 fs-1919-40 fs-768-44 fs-575-32">
+          Respectful And
+        </h2>
+        <h3 class="fs-56 fs-1919-40 fs-768-44 fs-575-32">
+          Confident Retirement
+        </h3>
       </div>
     </div>
 
