--- a/service.html
+++ b/service.html
@@ -103,7 +103,7 @@
                   <h3>Moderate</h3>
                 </div>
               </div>
-              <div class="planyy_hed_p4">
+              <!-- <div class="planyy_hed_p4">
                 <div class="item">
                   <img
                     src="./assets/images/Notification.svg"
@@ -116,7 +116,7 @@
                 <div class="item">
                   <img src="./assets/images/profile.svg" alt="profile" />
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
