--- a/index.html
+++ b/index.html
@@ -2320,7 +2320,7 @@
             <input
               type="text"
               name=""
-              value="30"
+              placeholder="30"
               id="textdemo"
               class="textdemo"
             />
@@ -2330,7 +2330,7 @@
             <input
               type="text"
               name=""
-              value="₹2,00,000"
+              placeholder="₹2,00,000"
               id="textdemo1"
               class="textdemo"
             />
@@ -2349,7 +2349,7 @@
             <input
               type="text"
               name=""
-              value="₹1,50,000"
+              placeholder="₹1,50,000"
               id="textdemo2"
               class="textdemo"
             />
