--- a/index.html
+++ b/index.html
@@ -1689,7 +1689,7 @@
         <a href="#" class="fs-1919-24 fs-768-32 fs-575-24 fw-600">T&C</a>
       </div>
 
-      <div>
+      <div class="bottom-btn">
         <button class="btn btn-bg-primary signup fs-24 fs-1919-16">
           Sign Up
         </button>
