--- a/service.html
+++ b/service.html
@@ -74,7 +74,12 @@
                   <h5>Monthly Household Income</h5>
                   <input type="text" name="" value="₹1,00,000" />
                   <h5>Monthly Expenses</h5>
-                  <input type="text" name="" value="₹70,000" />
+                  <input
+                    class="monthly-expenses-input"
+                    type="text"
+                    name=""
+                    value="₹70,000"
+                  />
                 </div>
               </div>
               <div class="planyy_hed_p2 re">
@@ -103,7 +108,8 @@
                   <h3>Moderate</h3>
                 </div>
               </div>
-              <!-- <div class="planyy_hed_p4">
+
+              <div class="planyy_hed_p4">
                 <div class="item">
                   <img
                     src="./assets/images/Notification.svg"
@@ -111,12 +117,17 @@
                   />
                 </div>
                 <div class="item">
-                  <img src="./assets/images/car.svg" alt="car" />
+                  <img src="./assets/images/Cart.svg" alt="cart" />
                 </div>
                 <div class="item">
                   <img src="./assets/images/profile.svg" alt="profile" />
+                  <img
+                    src="./assets/vector/arrow-right.svg"
+                    class="arrow"
+                    alt="arrow-right"
+                  />
                 </div>
-              </div> -->
+              </div>
             </div>
           </div>
         </div>
@@ -1394,7 +1405,7 @@
                   data-target="#exampleModal3"
                   value="Ready To Invest"
               /></span> -->
-              <div class="bottom-btn-sm all btnspnmakpay1">
+              <div class="bottom-btn-sm all btnspnmakpay1 step3-cta">
                 <button
                   name="next"
                   type="button"
@@ -3493,6 +3504,113 @@
               </section>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="footer" class="service-page">
+      <div class="footer-main">
+        <div class="footer-navbar">
+          <div class="logo-container d-flex align-items-center">
+            <img src="./assets/images/logo-white.svg" alt="logo" class="logo" />
+          </div>
+          <div class="nav">
+            <a class="fs-18 fs-1919-14" href="#">Home</a>
+            <a class="fs-18 fs-1919-14" href="#">Reads</a>
+            <a class="fs-18 fs-1919-14" href="#">About Us</a>
+            <a class="fs-18 fs-1919-14" href="#">Terms</a>
+          </div>
+          <div class="social">
+            <a href="#"
+              ><img src="./assets/images/youtube-white.svg" alt="youtube"
+            /></a>
+            <a href="#"
+              ><img src="./assets/images/twitter-white.svg" alt="twitter"
+            /></a>
+            <a href="#"
+              ><img src="./assets/images/instagram-white.svg" alt="instagram"
+            /></a>
+            <a href="#"><img src="./assets/images/fb-white.svg" alt="fb" /></a>
+            <a href="#"
+              ><img src="./assets/images/linkedin-white.svg" alt="linkedin"
+            /></a>
+          </div>
+        </div>
+        <hr />
+        <div class="sec-1">
+          <h3
+            class="
+              fs-18 fs-1919-14 fs-991-16
+              lh-768-28
+              fs-575-12
+              mb-3 mb-sm-4
+              fw-700
+            "
+          >
+            For any grievances and/or suggestions please write to
+            feedback@planyy.com
+          </h3>
+          <div class="fs-18 fs-1919-14 fs-575-12 lh-32 lh-1919-28 lg-575-24">
+            <span class="fw-600 fs-18 fs-1919-14 fs-575-12">DISCLAIMER: </span
+            ><span class="fs-18 fs-1919-14 fs-575-12">
+              Investments in securities market are subject to market risks, read
+              all the related documents carefully before investing. All
+              investing involves risk, including the possible loss of money you
+              invest, and past performance does not guarantee future
+              performance. Historical returns, expected returns, and probability
+              projections are provided for informational and illustrative
+              purposes, and may not reflect actual future performance. Please
+              see our Full Disclosure for important details.</span
+            >
+          </div>
+        </div>
+        <hr />
+        <div class="sec-2">
+          <div>
+            <h3 class="fs-18 fs-1919-14 fs-575-12 mb-3 fw-700">
+              Registered Office Address
+            </h3>
+            <div class="fs-18 fs-1919-14 fs-575-12 lh-32 lh-1919-28">
+              Queens Paradise, No. 16/1, 1st Floor Curve Road, Shivaji Nagar,
+              Bengaluru, Karnataka 560071
+            </div>
+          </div>
+          <div>
+            <h3 class="fs-18 fs-1919-14 fs-575-12 mb-3 fw-700">
+              Communication Address
+            </h3>
+            <div class="fs-18 fs-1919-14 fs-575-12 lh-32 lh-1919-28">
+              122, The Summit Bay (By Omkar), near Western Express Highway Metro
+              Station, Chakala, Andheri (East), Mumbai-400069, +91 96425 96425
+            </div>
+          </div>
+        </div>
+        <div class="sec-3">
+          <div>
+            <div class="fs-18 fs-1919-14 fs-575-12 lh-575-24 mb-3">
+              CIN #:- U74900KA2015PTC080747
+            </div>
+            <div class="fs-18 fs-1919-14 fs-575-12 lh-575-24 mb-3">
+              SEBI Registered Investment Advisor INA200005323
+            </div>
+            <div class="fs-18 fs-1919-14 fs-575-12 lh-575-24 mb-3">
+              Mutual Fund distributor with AMFI Registration No. ARN: 103168
+            </div>
+          </div>
+          <div class="comps">
+            <img src="./assets/images/BSE.svg" alt="BSE" />
+            <img src="./assets/images/sebi-white.svg" alt="sebi" />
+            <img src="./assets/images/amei.svg" alt="amei" />
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="copyright">
+        <div class="copyright-main">
+          <div class="fs-16 fs-1919-14 fs-991-12">
+            © 2021 Planny Financial Advisors Private Limited
+          </div>
+          <div class="fs-16 fs-1919-14 fs-991-12">www.planyy.com</div>
         </div>
       </div>
     </div>
